--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ sphinx = "*"
 wtforms-components = "*"
 email-validator = "*"
 gunicorn = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 pipenv = "*"
 
 [requires]
